new canvas test

--- a/index.html
+++ b/index.html
@@ -14,45 +14,48 @@
         <h1>STUDIO KRISTINA KOSTIC</h1>
     </header>
 
-    <div class="ticker-container">
-        <div class="ticker-content">
-          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-        </div>
-    </div>
 
-    <div class="intro-wrap">
-        <div id="canvas">
-        </div>
-    </div>
+      <div class="ticker-container">
+          <div class="ticker-content">
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+          </div>
+      </div>
 
-    <div class="ticker-container">
-        <div class="ticker-content">
-          <span>open to collaboration open to collaboration open to collaboration</span>
-        </div>
-    </div>
+      <div class="intro-wrap">
+          <div id="canvas">
+          </div>
+      </div>
 
+      <div class="ticker-container">
+          <div class="ticker-content">
+            <span>open to collaboration open to collaboration open to collaboration</span>
+          </div>
+      </div>
 
-    <aside class="flex-menu" id="menu">
-        <div class="left">
-            <h1>alo ba</h1>
-            <h2>ma zdravo</h2>
-        </div>
-        <div class="right">
-            <nav>
-                <ul class="nav-list project-list">
-                    <li>branding and logo</li>
-                    <li>posters and illustrations</li>
-                    <li>packaging</li>
-                    <li>book covers</li>
-                    <li>posters and illustrations</li>
-                    <li>packaging</li>
-                    <li>book covers</li>
-                </ul>
-            </nav>
-        </div>
-    </aside>
 
     <main>
+        <div class="canvas-bg-wrap">
+          <canvas id="canvas-bg"></canvas>
+        </div>
+        <aside class="flex-menu" id="menu">
+            <div class="left">
+                <h1>alo ba</h1>
+                <h2>ma zdravo</h2>
+            </div>
+            <div class="right">
+                <nav>
+                    <ul class="nav-list project-list">
+                        <li>branding and logo</li>
+                        <li>posters and illustrations</li>
+                        <li>packaging</li>
+                        <li>book covers</li>
+                        <li>posters and illustrations</li>
+                        <li>packaging</li>
+                        <li>book covers</li>
+                    </ul>
+                </nav>
+            </div>
+        </aside>
 
         <div class="container">
             <div class="img-wrap">
