--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js"></script>
-    <!-- <script src="index.js"></script> -->
     <link href="style.css" rel="stylesheet">
     <title>kris</title>
 </head>
@@ -25,67 +24,61 @@
           <div id="canvas">
           </div>
       </div>
-
-      <div class="ticker-container">
-          <div class="ticker-content">
-            <span>open to collaboration open to collaboration open to collaboration</span>
-          </div>
-      </div>
-
-
     <main>
-        <div class="canvas-bg-wrap">
-          <canvas id="canvas-bg"></canvas>
-        </div>
-        <aside class="flex-menu" id="menu">
-            <div class="left">
-                <h1>alo ba</h1>
-                <h2>ma zdravo</h2>
-            </div>
-            <div class="right">
-                <nav>
-                    <ul class="nav-list project-list">
-                        <li>branding and logo</li>
-                        <li>posters and illustrations</li>
-                        <li>packaging</li>
-                        <li>book covers</li>
-                        <li>posters and illustrations</li>
-                        <li>packaging</li>
-                        <li>book covers</li>
-                    </ul>
-                </nav>
-            </div>
-        </aside>
+      <section class="content">
+        <div class="content-bg"></div>
+        <div class="content-wrap">
+          <aside class="flex-menu" id="menu">
+              <div class="left">
+                  <h1>alo ba</h1>
+                  <h2>ma zdravo</h2>
+              </div>
+              <div class="right">
+                  <nav>
+                      <ul class="nav-list project-list">
+                          <li>branding and logo</li>
+                          <li>posters and illustrations</li>
+                          <li>packaging</li>
+                          <li>book covers</li>
+                          <li>posters and illustrations</li>
+                          <li>packaging</li>
+                          <li>book covers</li>
+                      </ul>
+                  </nav>
+              </div>
+          </aside>
 
-        <div class="container">
-            <div class="img-wrap">
-              <img src="./assets/image(1).png" alt="">
-            </div>
-            <div class="img-wrap">
-              <img src="./assets/Dalmacija_ship__02_-removebg-preview.png" alt="">
-            </div>
-            <div class="img-wrap">
-              <img src="./assets/uc-icon1.gif" alt="">
-            </div>
-            <div class="img-wrap">
-              <img src="./assets/image(1).png" alt="">
-            </div>
-            <div class="img-wrap">
-              <img src="./assets/Dalmacija_ship__02_-removebg-preview.png" alt="">
-            </div>
-            <div class="img-wrap">
-              <img src="./assets/uc-icon1.gif" alt="">
-            </div>
-            <div class="img-wrap">
-              <img src="./assets/image(1).png" alt="">
-            </div>
-            <div class="img-wrap">
-              <img src="./assets/Dalmacija_ship__02_-removebg-preview.png" alt="">
-            </div>
-            <div class="img-wrap">
-              <img src="./assets/uc-icon1.gif" alt="">
-            </div>
+          <div class="container">
+              <div class="img-wrap">
+                <img src="./assets/image(1).png" alt="">
+              </div>
+              <div class="img-wrap">
+                <img src="./assets/Dalmacija_ship__02_-removebg-preview.png" alt="">
+              </div>
+              <div class="img-wrap">
+                <img src="./assets/uc-icon1.gif" alt="">
+              </div>
+              <div class="img-wrap">
+                <img src="./assets/image(1).png" alt="">
+              </div>
+              <div class="img-wrap">
+                <img src="./assets/Dalmacija_ship__02_-removebg-preview.png" alt="">
+              </div>
+              <div class="img-wrap">
+                <img src="./assets/uc-icon1.gif" alt="">
+              </div>
+              <div class="img-wrap">
+                <img src="./assets/image(1).png" alt="">
+              </div>
+              <div class="img-wrap">
+                <img src="./assets/Dalmacija_ship__02_-removebg-preview.png" alt="">
+              </div>
+              <div class="img-wrap">
+                <img src="./assets/uc-icon1.gif" alt="">
+              </div>
+          </div>
         </div>
+      </section>
     </main>
 
     <footer>alo test</footer>
