--- a/index.html
+++ b/index.html
@@ -11,27 +11,31 @@
 <body>
     <header>
         <h1>STUDIO KRISTINA KOSTIC</h1>
-    </header>
-
-
-      <div class="ticker-container">
+        <div class="ticker-container">
           <div class="ticker-content">
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+            <span>open for collaboration </span>
+            <span>open for collaboration </span>
+            <span>open for collaboration </span>
+            <span>open for collaboration </span>
+            <span>open for collaboration </span>
+            <span>open for collaboration </span>
+            <span>open for collaboration </span>
           </div>
       </div>
+    </header>
 
       <div class="intro-wrap">
           <div id="canvas">
           </div>
       </div>
     <main>
-      <section class="content">
-        <div class="content-bg"></div>
+      <section id="content" class="content">
         <div class="content-wrap">
-          <aside class="flex-menu" id="menu">
+          <!-- <div class="content-bg"></div> -->
+          
+          <aside class="flex-menu">
               <div class="left">
-                  <h1>alo ba</h1>
-                  <h2>ma zdravo</h2>
+                  <h2>Selected <br/>projects</h2>
               </div>
               <div class="right">
                   <nav>
@@ -78,6 +82,20 @@
               </div>
           </div>
         </div>
+      </section>
+
+      <section class="about">
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+          Quaerat perspiciatis architecto quis. Optio ad ullam architecto maxime, veritatis necessitatibus 
+          impedit in nesciunt earum magni dolorum placeat nihil animi delectus dolores sunt commodi maiores, 
+          mollitia ea suscipit nisi adipisci eos. 
+          Cum harum, consequatur earum saepe ducimus ipsam a incidunt sapiente quasi eaque veritatis magni 
+          numquam voluptatibus sit, necessitatibus modi minus soluta laborum. Ipsa natus autem, iste, 
+          dicta iusto adipisci aut cupiditate nemo dignissimos 
+          totam corporis nesciunt saepe ut atque ea impedit quaerat, soluta eius expedita? Beatae sit 
+          voluptatibus id voluptate numquam facere eum blanditiis. Tempora officia consequatur eos, neque ab dolorem.
+        </p>
       </section>
     </main>
 
