--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
     <main>
       <section id="content" class="content">
         <div class="content-wrap">
-          <!-- <div class="content-bg"></div> -->
-          
           <aside class="flex-menu">
               <div class="left">
                   <h2>Selected <br/>projects</h2>
@@ -40,13 +38,12 @@
               <div class="right">
                   <nav>
                       <ul class="nav-list project-list">
-                          <li>branding and logo</li>
-                          <li>posters and illustrations</li>
-                          <li>packaging</li>
-                          <li>book covers</li>
-                          <li>posters and illustrations</li>
-                          <li>packaging</li>
-                          <li>book covers</li>
+                          <li>branding and logo <span>>></span></li>
+                          <li>posters and illustrations >></li>
+                          <li>packaging >></li>
+                          <li>book covers >></li>
+                          <li>typography >></li>
+                          <li>murals >></li>
                       </ul>
                   </nav>
               </div>
