--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="content-wrap">
           <aside class="flex-menu">
               <div class="left">
-                  <h2>Selected <br/>projects</h2>
+                  <h2 class="project-title">Selected <br/>projects</h2>
               </div>
               <div class="right">
                   <nav>
