--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <img src="./assets/Dalmacija_ship__02_-removebg-preview.png" alt="">
               </div>
               <div class="img-wrap">
-                <img src="./assets/uc-icon1.gif" alt="">
+                <img src="./assets/ajvar.jpg" alt="">
               </div>
               <div class="img-wrap">
                 <img src="./assets/image(1).png" alt="">
@@ -82,6 +82,7 @@
       </section>
 
       <section class="about">
+        <h2>about me</h2>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
           Quaerat perspiciatis architecto quis. Optio ad ullam architecto maxime, veritatis necessitatibus 
