--- a/index.html
+++ b/index.html
@@ -10,42 +10,54 @@
 </head>
 <body>
     <header>
-        <h1>STUDIO KRISTINA KOSTIC</h1>
-        <div class="ticker-container">
-          <div class="ticker-content">
-            <span>open for collaboration </span>
-            <span>open for collaboration </span>
-            <span>open for collaboration </span>
-            <span>open for collaboration </span>
-            <span>open for collaboration </span>
-            <span>open for collaboration </span>
-            <span>open for collaboration </span>
-          </div>
-      </div>
+        <h1>KRISTINA KOSTIC</h1>
+        <button class="back-to-top">
+          <span>&uarr;</span>
+        </button>
     </header>
 
-      <div class="intro-wrap">
-          <div id="canvas">
-          </div>
+    <div class="ticker-container">
+      <div class="ticker-content">
+        <span>open for collaboration </span>
+        <span>open for collaboration </span>
+        <span>open for collaboration </span>
+        <span>open for collaboration </span>
+        <span>open for collaboration </span>
+        <span>open for collaboration </span>
+        <span>open for collaboration </span>
       </div>
+    </div>
+
+    <div class="intro-wrap">
+        <div id="canvas">
+        </div>
+    </div>
     <main>
       <section id="content" class="content">
+        <div class="ticker-container">
+          <div class="ticker-content">
+            <span>UX/UI DESIGN </span>
+            <span>TYPOGRAPHY </span>
+            <span>TATTOO</span>
+            <span>DESIGN </span>
+          </div>
+        </div>
         <div class="content-wrap">
           <aside class="flex-menu">
               <div class="left">
-                  <h2 class="project-title">Selected <br/>projects</h2>
+                <nav>
+                  <ul class="nav-list project-list">
+                      <li>branding and logo <span>>></span></li>
+                      <li>posters and illustrations >></li>
+                      <li>packaging >></li>
+                      <li>book covers >></li>
+                      <li>typography >></li>
+                      <li>murals >></li>
+                  </ul>
+                </nav>
               </div>
               <div class="right">
-                  <nav>
-                      <ul class="nav-list project-list">
-                          <li>branding and logo <span>>></span></li>
-                          <li>posters and illustrations >></li>
-                          <li>packaging >></li>
-                          <li>book covers >></li>
-                          <li>typography >></li>
-                          <li>murals >></li>
-                      </ul>
-                  </nav>
+                <h2 class="project-title">Selected <br/>projects</h2>
               </div>
           </aside>
 
