--- a/index.html
+++ b/index.html
@@ -43,22 +43,17 @@
           </div>
         </div>
         <div class="content-wrap">
-          <aside class="flex-menu">
-              <div class="left">
-                <nav>
-                  <ul class="nav-list project-list">
-                      <li>branding and logo <span>>></span></li>
-                      <li>posters and illustrations >></li>
-                      <li>packaging >></li>
-                      <li>book covers >></li>
-                      <li>typography >></li>
-                      <li>murals >></li>
-                  </ul>
-                </nav>
-              </div>
-              <div class="right">
-                <h2 class="project-title">Selected <br/>projects</h2>
-              </div>
+          <aside class="nav-menu desktop">
+            <nav>
+              <ul class="nav-list project-list">
+                  <li>branding and logo <span>>></span></li>
+                  <li>posters and illustrations >></li>
+                  <li>packaging >></li>
+                  <li>book covers >></li>
+                  <li>typography >></li>
+                  <li>murals >></li>
+              </ul>
+            </nav>
           </aside>
 
           <div class="container">
@@ -80,15 +75,7 @@
               <div class="img-wrap">
                 <img src="./assets/uc-icon1.gif" alt="">
               </div>
-              <div class="img-wrap">
-                <img src="./assets/image(1).png" alt="">
-              </div>
-              <div class="img-wrap">
-                <img src="./assets/Dalmacija_ship__02_-removebg-preview.png" alt="">
-              </div>
-              <div class="img-wrap">
-                <img src="./assets/uc-icon1.gif" alt="">
-              </div>
+
           </div>
         </div>
       </section>
