projects sketch + cleanup

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>KRISTINA KOSTIC</h1>
-        <button class="back-to-top">
+        <button class="back-to-top hidden">
           <span>&uarr;</span>
         </button>
     </header>
@@ -42,41 +42,52 @@
             <span>DESIGN </span>
           </div>
         </div>
-        <div class="content-wrap">
-          <aside class="nav-menu desktop">
-            <nav>
-              <ul class="nav-list project-list">
-                  <li>branding and logo <span>>></span></li>
-                  <li>posters and illustrations >></li>
-                  <li>packaging >></li>
-                  <li>book covers >></li>
-                  <li>typography >></li>
-                  <li>murals >></li>
-              </ul>
-            </nav>
-          </aside>
+        <div class="content-wrap desktop">
+          <div class="menu-wrap">
 
-          <div class="container">
-              <div class="img-wrap">
-                <img src="./assets/image(1).png" alt="">
+            <div class="project">
+              <div class="project__title">
+                <h3>logoz</h3>
               </div>
-              <div class="img-wrap">
-                <img src="./assets/Dalmacija_ship__02_-removebg-preview.png" alt="">
+              <div class="project__wrap">
+                <p>X</p>
+                <p>logos a.k.a. lozi su veoma impourtant</p>
+                <div class="project__img-wrap">
+                  <img src="./assets/image(1).png" alt="">
+                </div>
               </div>
-              <div class="img-wrap">
-                <img src="./assets/ajvar.jpg" alt="">
-              </div>
-              <div class="img-wrap">
-                <img src="./assets/image(1).png" alt="">
-              </div>
-              <div class="img-wrap">
-                <img src="./assets/Dalmacija_ship__02_-removebg-preview.png" alt="">
-              </div>
-              <div class="img-wrap">
-                <img src="./assets/uc-icon1.gif" alt="">
-              </div>
+            </div>
 
+            <div class="project">
+              <div class="project__title">
+                <h3>logoz</h3>
+              </div>
+              <div class="project__wrap">
+                <p>X</p>
+                <p>logos a.k.a. lozi su veoma impourtant</p>
+                <div class="project__img-wrap">
+                  <img src="./assets/image(1).png" alt="">
+                </div>
+              </div>
+            </div>
+
+            <div class="project">
+              <div class="project__title">
+                <h3>logoz</h3>
+              </div>
+              <div class="project__wrap">
+                <p>X</p>
+                <p>logos a.k.a. lozi su veoma impourtant</p>
+                <div class="project__img-wrap">
+                  <img src="./assets/image(1).png" alt="">
+                </div>
+              </div>
+            </div>
           </div>
+
+          <div class="content-desktop">
+          </div>
+
         </div>
       </section>
 
