projects js, cleanup comin up

--- a/index.html
+++ b/index.html
@@ -42,87 +42,10 @@
             <span>DESIGN </span>
           </div>
         </div>
-        <h2 class="projects-heading">SELECTED PROJECTS</h2>
+        <h2 class="heading">SELECTED PROJECTS</h2>
         <div class="content-wrap desktop">
           <div class="menu-wrap">
-
-            <div class="project">
-              <div class="project__title">
-                  <button class="btn project__select">
-                    branding and logo <br/>>>
-                  </button>
-              </div>
-              <div class="project__wrap">
-                <p class="project__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit incidunt fugiat saepe quia? A maiores sunt, amet consequatur aspernatur harum, neque, ea voluptates consectetur perferendis quo ad! Vel itaque cumque quos culpa similique ducimus illum molestiae, aliquam ipsa aut rem? Veritatis, praesentium dicta esse officiis reiciendis commodi libero cum dolore officia. Asperiores incidunt veritatis non nemo. Nemo quibusdam accusantium quis dicta iusto minus odit itaque non nulla perspiciatis soluta tempora dolores alias quae dolorem velit libero, sunt amet inventore laudantium, pariatur est quidem corrupti expedita. Magnam, facilis omnis suscipit doloribus excepturi corporis magni quam ab aspernatur dolore, asperiores tempora tenetur?</p>
-                <div class="project__img-wrap">
-                  <img src="./assets/image(1).png" alt="">
-                  <img src="./assets/image(1).png" alt="">
-                  <img src="./assets/image(1).png" alt="">
-                </div>
-              </div>
-            </div>
-
-            <div class="project">
-              <div class="project__title">
-                  <button class="btn project__select">
-                    posters & illustrations <br/>>>
-                  </button>
-              </div>
-              <div class="project__wrap">
-                <p>X</p>
-                <p class="project__desc">logos a.k.a. lozi su veoma impourtant</p>
-                <div class="project__img-wrap">
-                  <img src="./assets/image(1).png" alt="">
-                </div>
-              </div>
-            </div>
-
-            <div class="project">
-              <div class="project__title">
-                  <button class="btn project__select">
-                    packaging <br/>>>
-                  </button>
-              </div>
-              <div class="project__wrap">
-                <p>X</p>
-                <p class="project__desc">logos a.k.a. lozi su veoma impourtant</p>
-                <div class="project__img-wrap">
-                  <img src="./assets/image(1).png" alt="">
-                </div>
-              </div>
-            </div>
-
-            <div class="project">
-              <div class="project__title">
-                  <button class="btn project__select">
-                    book cover <br/>>>
-                  </button>
-              </div>
-              <div class="project__wrap">
-                <p>X</p>
-                <p class="project__desc">logos a.k.a. lozi su veoma impourtant</p>
-                <div class="project__img-wrap">
-                  <img src="./assets/image(1).png" alt="">
-                </div>
-              </div>
-            </div>
-
-            <div class="project">
-              <div class="project__title">
-                  <button class="btn project__select">
-                    murals <br/>>>
-                  </button>
-              </div>
-              <div class="project__wrap">
-                <p>X</p>
-                <p class="project__desc">logos a.k.a. lozi su veoma impourtant</p>
-                <div class="project__img-wrap">
-                  <img src="./assets/image(1).png" alt="">
-                </div>
-              </div>
-            </div>
           </div>
-
           <div class="content-desktop">
           </div>
 
