--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>STUDIO KRISTINA KOSTIC = test</h1>
+        <h1>STUDIO KRIaaaSTINA KOSTIC = test</h1>
         <div class="ticker-container">
           <div class="ticker-content">
             <span>open for collaboration </span>
